// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`issues > cssSelectorReplacement case 0 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-x-2 {
  :where(& > :not(:last-child)) {
    --tw-space-x-reverse: 0;
    margin-inline-start: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
    margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
  }
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-x-reverse: 0;
    }
  }
}"
`;

exports[`issues > cssSelectorReplacement case 0 2`] = `
"
    view,text,::before,::after,::backdrop {
      --tw-space-x-reverse: 0;
    }
page,wx-root-content,:host {
  --spacing: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-x-2>view+view {
    --tw-space-x-reverse: 0;
    margin-right: calc((var(--spacing) * 2) * var(--tw-space-x-reverse));
    margin-left: calc((var(--spacing) * 2) * (1 - var(--tw-space-x-reverse)));
  }"
`;

exports[`issues > custom case 0 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.\\[\\&\\>\\*\\]\\:nth-\\[n\\+3\\]\\:hidden {
  &>* {
    &:nth-child(n+3) {
      display: none;
    }
  }
}"
`;

exports[`issues > custom case 0 2`] = `
"view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
._ngm_cnth-_na3_chidden>view:nth-child(n+3) {
      display: none;
    }
._ngm_cnth-_na3_chidden>text:nth-child(n+3) {
      display: none;
    }"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/631 1`] = `
":root, :host {
  --color-blue-500: oklch(62.3% .214 259.815);
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.size-12 {
  width: calc(var(--spacing) * 12);
  height: calc(var(--spacing) * 12);
}
.bg-blue-500\\/30 {
  background-color: color-mix(in srgb, oklch(62.3% .214 259.815) 30%, transparent);
  @supports (color: color-mix(in lab, red, red)) {
    background-color: color-mix(in oklab, var(--color-blue-500) 30%, transparent);
  }
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/631 2`] = `
"page,:host {
  --color-blue-500: rgb(50, 128, 255);
  --spacing: .25rem;
}

@supports (color: color(display-p3 0 0 0%)) {
page,:host {
  --color-blue-500: rgb(50, 128, 255);
}

@media (color-gamut: p3) {
page,:host {
  --color-blue-500: color(display-p3 0.26642 0.49122 0.98862);
}
}
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.size-12 {
  width: calc(var(--spacing) * 12);
  height: calc(var(--spacing) * 12);
}
.bg-blue-500s30 {
  background-color: rgba(50, 128, 255, 0.3);
}
@media (color-gamut: p3) {
.bg-blue-500s30 {
  background-color: color(display-p3 0.26642 0.49122 0.98862 / 0.3);
}
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/632 1`] = `
":root, :host {
  --color-blue-100: oklch(93.2% .032 255.585);
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.hover\\:border-blue-100\\/20 {
  &:hover {
    @media (hover: hover) {
      border-color: color-mix(in srgb, oklch(93.2% .032 255.585) 20%, transparent);
      @supports (color: color-mix(in lab, red, red)) {
        border-color: color-mix(in oklab, var(--color-blue-100) 20%, transparent);
      }
    }
  }
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/632 2`] = `
"page,:host {
  --color-blue-100: rgb(219, 234, 254);
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.hovercborder-blue-100s20:hover {
      border-color: rgba(219, 234, 254, 0.2);
  }"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/638 1`] = `
":root, :host {
  --color-green-300: oklch(87.1% .15 154.449);
  --color-gray-600: oklch(44.6% .03 256.802);
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.dark\\:hover\\:border-green-300 {
  @media (prefers-color-scheme: dark) {
    &:hover {
      @media (hover: hover) {
        border-color: var(--color-green-300);
      }
    }
  }
}
.dark\\:hover\\:bg-gray-600 {
  @media (prefers-color-scheme: dark) {
    &:hover {
      @media (hover: hover) {
        background-color: var(--color-gray-600);
      }
    }
  }
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/638 2`] = `
"page,:host {
  --color-green-300: rgb(123, 241, 168);
  --color-gray-600: rgb(74, 85, 101);
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
@media (prefers-color-scheme: dark) {
    .darkchovercborder-green-300:hover {
        border-color: var(--color-green-300);
    }
  }
@media (prefers-color-scheme: dark) {
    .darkchovercbg-gray-600:hover {
        background-color: var(--color-gray-600);
    }
  }"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/638 case 0 1`] = `
":root, :host {
  --color-green-300: oklch(87.1% .15 154.449);
  --color-zinc-50: oklch(98.5% 0 0);
  --color-zinc-900: oklch(21% .006 285.885);
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.flex {
  display: flex;
}
.min-h-screen {
  min-height: 100vh;
}
.flex-col {
  flex-direction: column;
}
.bg-zinc-50 {
  background-color: var(--color-zinc-50);
}
.p-4 {
  padding: calc(var(--spacing) * 4);
}
.dark\\:bg-zinc-900 {
  @media (prefers-color-scheme: dark) {
    background-color: var(--color-zinc-900);
  }
}
.dark\\:hover\\:bg-green-300 {
  @media (prefers-color-scheme: dark) {
    &:hover {
      @media (hover: hover) {
        background-color: var(--color-green-300);
      }
    }
  }
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/638 case 0 2`] = `
"page,:host {
  --color-green-300: rgb(123, 241, 168);
  --color-zinc-50: rgb(250, 250, 250);
  --color-zinc-900: rgb(24, 24, 27);
  --spacing: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.flex {
  display: flex;
}
.min-h-screen {
  min-height: 100vh;
}
.flex-col {
  flex-direction: column;
}
.bg-zinc-50 {
  background-color: var(--color-zinc-50);
}
.p-4 {
  padding: calc(var(--spacing) * 4);
}
@media (prefers-color-scheme: dark) {
.darkcbg-zinc-900 {
    background-color: var(--color-zinc-900);
}
  }
@media (prefers-color-scheme: dark) {
    .darkchovercbg-green-300:hover {
        background-color: var(--color-green-300);
    }
  }"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/643 1`] = `
"@layer properties;
:root, :host {
  --color-cyan-500: oklch(71.5% .143 215.221);
  --color-blue-500: oklch(62.3% .214 259.815);
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.h-14 {
  height: calc(var(--spacing) * 14);
}
.bg-gradient-to-r {
  --tw-gradient-position: to right in oklab;
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.from-cyan-500 {
  --tw-gradient-from: var(--color-cyan-500);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
}
.to-blue-500 {
  --tw-gradient-to: var(--color-blue-500);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
}
@property --tw-gradient-position {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-via {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-to {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-via-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 0%;
}
@property --tw-gradient-via-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 50%;
}
@property --tw-gradient-to-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 100%;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-gradient-position: initial;
      --tw-gradient-from: #0000;
      --tw-gradient-via: #0000;
      --tw-gradient-to: #0000;
      --tw-gradient-stops: initial;
      --tw-gradient-via-stops: initial;
      --tw-gradient-from-position: 0%;
      --tw-gradient-via-position: 50%;
      --tw-gradient-to-position: 100%;
    }
  }
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/643 2`] = `
"::before,::after {
      --tw-content: "";
}
view,text,::before,::after,::backdrop {
      --tw-gradient-position: initial;
      --tw-gradient-from: rgba(0,0,0,0);
      --tw-gradient-via: rgba(0,0,0,0);
      --tw-gradient-to: rgba(0,0,0,0);
      --tw-gradient-stops: initial;
      --tw-gradient-via-stops: initial;
      --tw-gradient-from-position: 0%;
      --tw-gradient-via-position: 50%;
      --tw-gradient-to-position: 100%;
    }
page,:host {
  --color-cyan-500: rgb(0, 182, 212);
  --color-blue-500: rgb(50, 128, 255);
  --spacing: .25rem;
}
@supports (color: color(display-p3 0 0 0%)) {
page,:host {
  --color-cyan-500: rgb(0, 182, 212);
  --color-blue-500: rgb(50, 128, 255);
}

@media (color-gamut: p3) {
page,:host {
  --color-cyan-500: color(display-p3 0.2467 0.71003 0.84144);
  --color-blue-500: color(display-p3 0.26642 0.49122 0.98862);
}
}
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.h-14 {
  height: calc(var(--spacing) * 14);
}
.bg-gradient-to-r {
  --tw-gradient-position: to right ;
  background-image: linear-gradient(var(--tw-gradient-stops));
}
.from-cyan-500 {
  --tw-gradient-from: var(--color-cyan-500);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
}
.to-blue-500 {
  --tw-gradient-to: var(--color-blue-500);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/652 1`] = `
"@layer properties;
:root, :host {
  --blur-2xl: 40px;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.skew-x-0 {
  --tw-skew-x: skewX(0deg);
  transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
}
.invert {
  --tw-invert: invert(100%);
  filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
}
.backdrop-blur-2xl {
  --tw-backdrop-blur: blur(var(--blur-2xl));
  -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
  backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
}
@property --tw-rotate-x {
  syntax: "*";
  inherits: false;
}
@property --tw-rotate-y {
  syntax: "*";
  inherits: false;
}
@property --tw-rotate-z {
  syntax: "*";
  inherits: false;
}
@property --tw-skew-x {
  syntax: "*";
  inherits: false;
}
@property --tw-skew-y {
  syntax: "*";
  inherits: false;
}
@property --tw-blur {
  syntax: "*";
  inherits: false;
}
@property --tw-brightness {
  syntax: "*";
  inherits: false;
}
@property --tw-contrast {
  syntax: "*";
  inherits: false;
}
@property --tw-grayscale {
  syntax: "*";
  inherits: false;
}
@property --tw-hue-rotate {
  syntax: "*";
  inherits: false;
}
@property --tw-invert {
  syntax: "*";
  inherits: false;
}
@property --tw-opacity {
  syntax: "*";
  inherits: false;
}
@property --tw-saturate {
  syntax: "*";
  inherits: false;
}
@property --tw-sepia {
  syntax: "*";
  inherits: false;
}
@property --tw-drop-shadow {
  syntax: "*";
  inherits: false;
}
@property --tw-drop-shadow-color {
  syntax: "*";
  inherits: false;
}
@property --tw-drop-shadow-alpha {
  syntax: "<percentage>";
  inherits: false;
  initial-value: 100%;
}
@property --tw-drop-shadow-size {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-blur {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-brightness {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-contrast {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-grayscale {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-hue-rotate {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-invert {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-opacity {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-saturate {
  syntax: "*";
  inherits: false;
}
@property --tw-backdrop-sepia {
  syntax: "*";
  inherits: false;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-rotate-x: initial;
      --tw-rotate-y: initial;
      --tw-rotate-z: initial;
      --tw-skew-x: initial;
      --tw-skew-y: initial;
      --tw-blur: initial;
      --tw-brightness: initial;
      --tw-contrast: initial;
      --tw-grayscale: initial;
      --tw-hue-rotate: initial;
      --tw-invert: initial;
      --tw-opacity: initial;
      --tw-saturate: initial;
      --tw-sepia: initial;
      --tw-drop-shadow: initial;
      --tw-drop-shadow-color: initial;
      --tw-drop-shadow-alpha: 100%;
      --tw-drop-shadow-size: initial;
      --tw-backdrop-blur: initial;
      --tw-backdrop-brightness: initial;
      --tw-backdrop-contrast: initial;
      --tw-backdrop-grayscale: initial;
      --tw-backdrop-hue-rotate: initial;
      --tw-backdrop-invert: initial;
      --tw-backdrop-opacity: initial;
      --tw-backdrop-saturate: initial;
      --tw-backdrop-sepia: initial;
    }
  }
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/652 2`] = `
"::before,::after {
      --tw-content: "";
}
view,text,::before,::after,::backdrop {
      --tw-rotate-x: initial;
      --tw-rotate-y: initial;
      --tw-rotate-z: initial;
      --tw-skew-x: initial;
      --tw-skew-y: initial;
      --tw-blur: initial;
      --tw-brightness: initial;
      --tw-contrast: initial;
      --tw-grayscale: initial;
      --tw-hue-rotate: initial;
      --tw-invert: initial;
      --tw-opacity: initial;
      --tw-saturate: initial;
      --tw-sepia: initial;
      --tw-drop-shadow: initial;
      --tw-drop-shadow-color: initial;
      --tw-drop-shadow-alpha: 100%;
      --tw-drop-shadow-size: initial;
      --tw-backdrop-blur: initial;
      --tw-backdrop-brightness: initial;
      --tw-backdrop-contrast: initial;
      --tw-backdrop-grayscale: initial;
      --tw-backdrop-hue-rotate: initial;
      --tw-backdrop-invert: initial;
      --tw-backdrop-opacity: initial;
      --tw-backdrop-saturate: initial;
      --tw-backdrop-sepia: initial;
    }
page,:host {
  --blur-2xl: 40px;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.skew-x-0 {
  --tw-skew-x: skewX(0deg);
  transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
}
.invert {
  --tw-invert: invert(100%);
  filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
}
.backdrop-blur-2xl {
  --tw-backdrop-blur: blur(var(--blur-2xl));
  backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/695 1`] = `
"*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.rounded-full {
  border-radius: calc(infinity * 1px);
}
.rounded-s-full {
  border-start-start-radius: calc(infinity * 1px);
  border-end-start-radius: calc(infinity * 1px);
}
.rounded-ss-full {
  border-start-start-radius: calc(infinity * 1px);
}
.rounded-e-full {
  border-start-end-radius: calc(infinity * 1px);
  border-end-end-radius: calc(infinity * 1px);
}
.rounded-se-full {
  border-start-end-radius: calc(infinity * 1px);
}
.rounded-ee-full {
  border-end-end-radius: calc(infinity * 1px);
}
.rounded-es-full {
  border-end-start-radius: calc(infinity * 1px);
}
.rounded-t-full {
  border-top-left-radius: calc(infinity * 1px);
  border-top-right-radius: calc(infinity * 1px);
}
.rounded-l-full {
  border-top-left-radius: calc(infinity * 1px);
  border-bottom-left-radius: calc(infinity * 1px);
}
.rounded-tl-full {
  border-top-left-radius: calc(infinity * 1px);
}
.rounded-r-full {
  border-top-right-radius: calc(infinity * 1px);
  border-bottom-right-radius: calc(infinity * 1px);
}
.rounded-tr-full {
  border-top-right-radius: calc(infinity * 1px);
}
.rounded-b-full {
  border-bottom-right-radius: calc(infinity * 1px);
  border-bottom-left-radius: calc(infinity * 1px);
}
.rounded-br-full {
  border-bottom-right-radius: calc(infinity * 1px);
}
.rounded-bl-full {
  border-bottom-left-radius: calc(infinity * 1px);
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/695 2`] = `
"view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.rounded-full {
  border-radius: 9999px;
}
.rounded-s-full {
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}
.rounded-ss-full {
  border-top-left-radius: 9999px;
}
.rounded-e-full {
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}
.rounded-se-full {
  border-top-right-radius: 9999px;
}
.rounded-ee-full {
  border-bottom-right-radius: 9999px;
}
.rounded-es-full {
  border-bottom-left-radius: 9999px;
}
.rounded-t-full {
  border-top-left-radius: 9999px;
  border-top-right-radius: 9999px;
}
.rounded-l-full {
  border-top-left-radius: 9999px;
  border-bottom-left-radius: 9999px;
}
.rounded-tl-full {
  border-top-left-radius: 9999px;
}
.rounded-r-full {
  border-top-right-radius: 9999px;
  border-bottom-right-radius: 9999px;
}
.rounded-tr-full {
  border-top-right-radius: 9999px;
}
.rounded-b-full {
  border-bottom-right-radius: 9999px;
  border-bottom-left-radius: 9999px;
}
.rounded-br-full {
  border-bottom-right-radius: 9999px;
}
.rounded-bl-full {
  border-bottom-left-radius: 9999px;
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/695 taro rpx case 1`] = `
".rounded-full {
  border-radius: 9999px;
}
"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/715 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-y-4 {
  :where(& > :not(:last-child)) {
    --tw-space-y-reverse: 0;
    margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
    margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
  }
}
@property --tw-space-y-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-y-reverse: 0;
    }
  }
}"
`;

exports[`issues > https://github.com/sonofmagic/weapp-tailwindcss/issues/715 2`] = `
"
    view,text,::before,::after,::backdrop {
      --tw-space-y-reverse: 0;
    }
page,:host {
  --spacing: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-y-4>view+view {
    --tw-space-y-reverse: 0;
    margin-bottom: calc((var(--spacing) * 4) * var(--tw-space-y-reverse));
    margin-top: calc((var(--spacing) * 4) * (1 - var(--tw-space-y-reverse)));
  }"
`;

exports[`issues > space-x-number 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-x-2 {
  :where(& > :not(:last-child)) {
    --tw-space-x-reverse: 0;
    margin-inline-start: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
    margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
  }
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-x-reverse: 0;
    }
  }
}"
`;

exports[`issues > space-x-number 2`] = `
"
    view,text,::before,::after,::backdrop {
      --tw-space-x-reverse: 0;
    }
page,:host {
  --spacing: .25rem;
}
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-x-2>view+view {
    --tw-space-x-reverse: 0;
    margin-right: calc((var(--spacing) * 2) * var(--tw-space-x-reverse));
    margin-left: calc((var(--spacing) * 2) * (1 - var(--tw-space-x-reverse)));
  }"
`;
